# unity-sps

./: .gitignore  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  TESTING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-action/: action.yml
.github/workflows/: build_docker_images.yml  dependabot.yml  integration_tests.yml  pre-commit.yml  regression_test_mcp_venue_dev.yml  smoke_tests.yml  static_analysis.yml  static_analysis_pre_commit.yml  unit_tests.yml
airflow/config/: webserver_config.py
airflow/dags/: appgen_dag.py  aws_cli_cwl_dag.py  aws_cli_pod.yaml  awscli_dag.py  busybox.py  cwl_dag.py  cwl_dag_asips.py  cwl_dag_ecr.py  cwl_dag_modular.py  cwl_dag_new.py  cwl_high_workload_dag.py  cwltool_hello_world.py  dag_bags.py  data_products.schema.json  db_cleanup.py  db_cleanup_dag.py  delete_dag.py  docker_cwl_pod.yaml  dynamic_task_mapping_test.py  edrgen.py  edrgen_dag.py  emit_workflow.py  env_test.py  eval_hello_world_readiness.py  eval_srl_edrgen.py  eval_srl_edrgen_readiness.py  eval_srl_rdrgen.py  eval_srl_rdrgen_readiness.py  eval_srl_vic2png.py  example_k8s_secret_dag.py  execute_VTLS_DAG.py  hello_world.py  karpenter_test.py  rdrgen.py  router.py  run_config.schema.json  run_ogc_process.py  s3_mount_kubernetes_pod_example.py  sbg_L1_to_L2_e2e_cwl_dag.py  sbg_L1_to_L2_e2e_cwl_step_by_step_dag.py  (+9 more)
airflow/docker/custom_airflow/: Dockerfile  webserver_config.py
airflow/docker/cwl/: Dockerfile  Dockerfile_modular  docker_cwl_entrypoint.sh  docker_cwl_entrypoint_modular.sh  docker_cwl_entrypoint_utils.py
airflow/docker/cwl_ecr/: Dockerfile  docker_cwl_ecr_entrypoint.sh
airflow/docker/run_ogc_process/: Dockerfile  run_ogc_process_entrypoint.sh
airflow/helm/: values.tmpl.yaml  values_high_load.tmpl.yaml
airflow/plugins/: unity_sps_utils.py
airflow/system_dags/: db_cleanup_dag.py
lambda/src/airflow-dag-trigger/: airflow_dag_trigger.py
ogc-application-packages/: appgen_dag.json  cwl_dag.json  cwl_dag_modular.json  db_cleanup_dag.json  karpenter_test.json  sbg_preprocess_cwl_dag.json
terraform-unity/: .terraform.lock.hcl  README.md  data.tf  locals.tf  main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
terraform-unity/modules/terraform-eks-cluster/: .terraform.lock.hcl  README.md  data.tf  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform-unity/modules/terraform-unity-sps-airflow/: .terraform.lock.hcl  README.md  data.tf  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform-unity/modules/terraform-unity-sps-database/: .terraform.lock.hcl  README.md  check-rds-snapshot.sh  check_rds_snapshot.sh  data.tf  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform-unity/modules/terraform-unity-sps-efs/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform-unity/modules/terraform-unity-sps-eks/: .terraform.lock.hcl  README.md  eks_post_deployment_actions.sh  locals.tf  main.tf  variables.tf  versions.tf
terraform-unity/modules/terraform-unity-sps-initiators/: .terraform.lock.hcl  README.md  data.tf  main.tf  variables.tf
terraform-unity/modules/terraform-unity-sps-karpenter/: .terraform.lock.hcl  README.md  data.tf  locals.tf  main.tf  provider.tf  variables.tf  versions.tf
terraform-unity/modules/terraform-unity-sps-karpenter-node-config/: .terraform.lock.hcl  README.md  data.tf  main.tf  node-user-data.sh  outputs.tf  variables.tf  versions.tf
terraform-unity/modules/terraform-unity-sps-ogc-processes-api/: .terraform.lock.hcl  README.md  data.tf  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform-unity/modules/terraform-unity-sps-s3/: README.md  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform-unity/scripts/: postinstall.sh  preinstall.sh  preserve_s3.sh
terraform-unity/tfvars/: asips-int-sps.tfvars  asips-int-sps.tfvars-2.5.1  asips-int-sps.tfvars-2.5.8
unity-initiator/routers/: srl_router.tmpl.yaml
unity-test/: TESTING.md  conftest.py
unity-test/system/integration/features/: airflow_sbg_e2e.feature  cwl_workflow_with_ogc_api.feature  cwl_workflows_with_airflow_api.feature  cwl_workflows_with_ogc_api.feature  emit_workflow_with_airflow_api.feature  emit_workflow_with_ogc_api.feature  sbg_e2e_scale_workflow.feature  sbg_e2e_scale_workflow_with_airflow_api.feature  sbg_e2e_scale_workflow_with_ogc_api.feature  sbg_emit_workflow.feature  sbg_preprocess_workflow.feature  sbg_preprocess_workflow_with_airflow_api.feature
unity-test/system/integration/step_defs/: test_airflow_sbg_e2e.py  (+11 more)
unity-test/unit/: conftest.py
unity-test/unit/features/: dags_validation.feature
unity-test/unit/step_defs/: TESTING.md  test_dags_validation.py
utils/: airflow_kpo_pv_access.yaml  airflow_kpo_pv_access_deployment.yaml  check_ogc_api_status.sh  cognito-token-fetch.py  deploy_ogc_app_packages.py  ogc_deploy_process.py  ogc_submit_job.py  post_deployment.sh  post_deployment_terraform.sh  s3-pv-pod.yaml  s3_pv_access_deployment.yaml  trigger_dag.py  unity_sps_deploy_or_destroy_sps.sh
(+5 files in other folders)
