[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-sps"
version = "24.1-beta.1"
authors = [
    { name = "Drew Meyers", email = "drew.meyers@jpl.nasa.gov" },
]
description = "The science processing service area of Unity."
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.license]
text = "Apache-2.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/unity-sds/unity-sps"

[project.optional-dependencies]
develop = []
test = [
    "python-dotenv==1.0.1",
    "pytest==8.0.2",
    "pytest-bdd==7.1.1",
    "pytest-mock==3.12.0",
    "requests==2.31.0",
    "apache-airflow==2.8.1",
    "kubernetes==29.0.0",
    "boto3==1.34.46",
    "apache-airflow-providers-cncf-kubernetes==8.0.0"
]
experiment = []
lambda-airflow-dag-trigger = [
    "requests==2.31.0",
    "aws-lambda-powertools==2.36.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]
namespaces = false

[tool.isort]
line_length = 110

[tool.black]
line-length = 110

[tool.ruff]
line-length = 110

[tool.ruff.lint]
ignore = ["E501", "E402", "E731"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
