[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-sps"
version = "2.4.0"
authors = [
    { name = "Drew Meyers", email = "drew.meyers@jpl.nasa.gov" },
    { name = "Luca Cinquini", email = "luca.cinquini@jpl.nasa.gov" },
    { name = "Nikki Tebaldi", email = "nicole.tebaldi@jpl.nasa.gov" },
    { name = "Brad Lunsford", email = "bradley.t.lunsford@jpl.nasa.gov" }
]
description = "The science processing service area of Unity."
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.license]
text = "Apache-2.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/unity-sds/unity-sps"

[project.optional-dependencies]
develop = []
test = [
    "python-dotenv==1.0.1",
    "pytest==8.3.3",
    "pytest-bdd==7.2.0",
    "pytest-mock==3.14.0",
    "requests==2.32.3",
    "apache-airflow==2.10.3",
    "kubernetes==29.0.0",
    "boto3==1.37.16",
    "backoff==2.2.1",
    "apache-airflow-providers-cncf-kubernetes==8.4.1",
    # "unity-py @ git+https://github.com/unity-sds/unity-monorepo.git@main#subdirectory=libs/unity-py"
    "unity_sps_ogc_processes_api_python_client @ git+https://github.com/unity-sds/unity-sps-ogc-processes-api-client-python.git@2.0.0"
]
experiment = []
lambda-airflow-dag-trigger = [
    "requests==2.32.3",
    "aws-lambda-powertools[parser]==2.41.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]
namespaces = false

[tool.isort]
line_length = 110

[tool.black]
line-length = 110

[tool.ruff]
line-length = 110

[tool.ruff.lint]
ignore = ["E501", "E402", "E731"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
